--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,58 @@
      Author's custom styles
      ========================================================================== */
   
+  *, *:before, *:after {
+    box-sizing: border-box;
+  }
+
+  html {
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
+  }
+
+  .wrapper {
+    width: 100%;
+  }
+
+  .container {
+    max-width: 1000px;
+    margin: 50px auto 50px auto;
+  }
+
+  #search-form {
+    width: 400px;
+    margin: auto;
+    margin-bottom: ;
+    text-align: center;
+  }
+
+  input[type=text] {
+    padding: 5px;
+    margin: 10px 0;
+  }
+
+  input[type=submit] {
+    padding: 5px 10px 5px 10px;
+    margin: 10px 0;
+  }
+
+  #gh-topics li {
+    display: inline-block;
+    margin: 0 .125em .333em 0;
+    /* font-size: 14px; */
+    /* font-weight: 400; */
+    border: 1px solid transparent;
+    border-radius: 2em;
+    padding: 0 10px;
+    line-height: 22px;
+    color: #0366d6;
+    background-color: #e7f3ff;
+  }
+
+  #gh-topics li:hover {
+    background-color: #def;
+  }
+
+
   /* ==========================================================================
      Helper classes
      ========================================================================== */
