--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,7 @@
   #search-form {
     width: 400px;
     margin: auto;
-    margin-bottom: ;
+    margin-bottom: 30px;
     text-align: center;
   }
 
