--- a/src/css/style.css
+++ b/src/css/style.css
@@ -110,20 +110,34 @@
     text-align: center;
   }
 
-  #search-form input[type=text] {
-    padding: 5px;
-    margin: 10px 0;
-  }
-
-  #search-form input[type=submit] {
+  #search-form input[type="submit"] {
     padding: 5px 10px 5px 10px;
     margin: 10px 0;
   }
 
+  #search-form input[type="text"] {
+    padding: 5px;
+    margin: 10px 0;
+  }
+  
   #gh-topics {
     text-align: center;
   }
   
+  #gh-topics .loader {
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+
   #gh-topics ul {
     margin: 0;
     padding: 0;
