--- a/src/css/style.css
+++ b/src/css/style.css
@@ -121,15 +121,17 @@
   }
   
   #gh-topics {
+    width: 100%;
     text-align: center;
   }
   
   #gh-topics .loader {
-    border: 16px solid #f3f3f3; /* Light grey */
-    border-top: 16px solid #3498db; /* Blue */
+    margin: auto;
+    border: 8px solid #f3f3f3; /* Light grey */
+    border-top: 8px solid #3498db; /* Blue */
     border-radius: 50%;
-    width: 120px;
-    height: 120px;
+    width: 60px;
+    height: 60px;
     animation: spin 2s linear infinite;
   }
   
